--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -6,6 +6,7 @@
   padding: 10px;
   bottom: 0;
   left: 0;
+  pointer-events: none;
 }
 
 .comment-field {
@@ -41,6 +42,15 @@
       resize: none;
       margin-bottom: -4px;
       line-height: normal;
+      opacity: 0;
+
+      &:focus {
+        opacity: 1;
+
+        + .fake-input {
+          opacity: 0;
+        }
+      }
 
       &::-webkit-input-placeholder {
         font-style: italic;
