--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -43,6 +43,7 @@
       margin-bottom: -4px;
       line-height: normal;
       opacity: 0;
+      overflow-y: hidden;
 
       &:focus {
         opacity: 1;
@@ -60,6 +61,11 @@
 
     &--empty {
       box-shadow: none;
+
+      input,
+      textarea {
+        opacity: 1;
+      }
 
       &:focus-within {
         box-shadow: 0 0 50px 0 rgba(0,0,0,.35);
