--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -6,7 +6,21 @@
   padding: 10px;
   bottom: 0;
   left: 0;
-  pointer-events: none;
+
+  span {
+
+  }
+}
+
+.file-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  font-size: 1px;
+  cursor: pointer;
 }
 
 .comment-field {
@@ -16,6 +30,7 @@
   margin: 20px 0;
 
   &__action {
+    position: relative;
     flex: initial;
     flex-basis: 40px;
     align-self: flex-end;
@@ -75,6 +90,7 @@
 
   &__attachment {
     position: relative;
+    display: block;
     height: 160px;
     background-color: #CCC;
     background-position: center;
@@ -83,8 +99,12 @@
     &-label {
       position: absolute;
       top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      left: 20px;
+      transform: translate(0, -50%);
+      font-size: 32px;
+      font-weight: 700;
+      color: white;
+      text-transform: uppercase;
     }
   }
 }
