--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -10,7 +10,7 @@
     <div class="itemBox">
       {% for item in itemgroup %}
       <ul class="itemBox__row itemBox__row--item itemBox__row--permalink">
-        <li class="itemBox__cell flex-grow-0">
+        <li class="itemBox__cell flex-grow-0 itemBox__cell--permalink">
           <div class="itemBox__cellInner">
             <div class="itemBox__value">{{item.icon}}</div>
           </div>
