--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -96,6 +96,7 @@
     background-color: #CCC;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 
     &-label {
       position: absolute;
