--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -5,7 +5,15 @@
       <div class="selector">
         <div class="selector__item JS_selectorItem--active selector__item--selected">
           <div class="selector__block">
+          {% if item.prefix  %}
+            <div class="selector__blockPart selector__blockPart--prefix JS_has-popup JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">{{item.prefix}}</div>
+          {% endif %}
+          {% if item.field  %}
+            <div class="selector__blockPart selector__blockPart--field JS_has-popup JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">{{item.field}}</div>
+          {% endif %}
+          {% if item.label  %}
             <div class="selector__blockPart selector__blockPart--label JS_has-popup JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">{{item.label}}</div>
+          {% endif %}
           </div>
         </div>
       </div>
