--- a/sass/components/headers.scss
+++ b/sass/components/headers.scss
@@ -65,7 +65,7 @@
   &__label {
     display: inline-block;
     background-color: #E6E6E6;
-    padding: 7px 10px 7px 15px;
+    padding-left: 15px;
     line-height: 1;
     border-radius: 0 15px 15px 0;
   }
@@ -103,7 +103,7 @@
 
   &--item {
     border-radius: 0;
-    
+
     &::before {
       border-top-color: transparent;
     }
