Header update: Bug and workspace icon X

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -3,7 +3,7 @@
   <div class="header__title">
     <div class="header__type header__type--bug">
       <div class="header__label">
-        <div class="selector ">
+        <div class="selector selector--expanded ">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
               <div class="selector__blockPart selector__blockPart--label">Bug</div>
