--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -18,9 +18,7 @@
         </div>
       </div>
 
-      <div class="inline">
-        <a href="#" class="link truncate">{{item.name}}</a>
-      </div>
+      <a class="breadcrumbs__link" href="#">{{item.name}}</a>
 
       <div class="breadcrumbs__seperator">/</div>
     </div>
