--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   left: 0;
   pointer-events: none;
+  word-break: break-word;
 
   span {
 
@@ -60,6 +61,8 @@
       line-height: normal;
       opacity: 0;
       overflow-y: hidden;
+      word-break: break-word;
+      -moz-box-sizing: content-box;
 
       &:focus {
         opacity: 1;
