--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -56,7 +56,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-
+/*
     &::after {
       content: '';
       position: absolute;
@@ -68,7 +68,7 @@
       z-index: 1;
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
     }
-
+*/
     .selector {
       margin: 0 3px 0 0;
     }
