added Content page header

--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -24,8 +24,8 @@
                   </ul>
                 </div>
               </div>
-
                 <div class="tid-content-wrapper">
+                    <h2 class="pagetitle" style="padding: 0 15px;">Content</h2>
                     <div id="tabs" class="tid-sidebar">
                         <div class="scroller scroller-right">
                             <div class="go-right invisible" style="display: none;"></div>
