--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -32,19 +32,19 @@
     <div class="block-action readonly">
 
       <div class="selector selector--singleselect selector--expanded JS_selector">
-        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1">
+        <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1" panel-name="overview">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--prefix"></div>
           </div>
         </div>
         <div class="selector__itemSeperator"></div>
-        <div class="selector__item  JS_selectorItem JS_panels-state-2">
+        <div class="selector__item  JS_selectorItem JS_panels-state-2" panel-name="comments-attachments">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
           </div>
         </div>
         <div class="selector__itemSeperator"></div>
-        <div class="selector__item JS_selectorItem JS_panels-state-3">
+        <div class="selector__item JS_selectorItem JS_panels-state-3" panel-name="history">
           <div class="selector__block">
             <div class="selector__blockPart selector__blockPart--prefix"></div>
           </div>
