Added overview tabs

--- a/_includes/blocks/old-pmx-item-detail-panel.html
+++ b/_includes/blocks/old-pmx-item-detail-panel.html
@@ -79,4 +79,23 @@
     </div>
   </div>
   <!-- /.tab-content -->
+
+  <div class="tab-content" tab-name="solution" style="display: none;">
+
+    <div class="tid-content">
+      <h2 class="pagetitle">Solution</h2>
+      <div>
+        <span ipe_id="660526" ipe_object="Item" ipe_property="29" class="hasipe addcontent" title="Click here to edit" ipe_editmodeallowed="true"><a class="focuscatcher" href="#" onclick="return false"></a>Click here to edit</span>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div class="tab-content" tab-name="Bugs" style="display: none;">
+
+    <div class="p-4">
+      <h2 class="pagetitle">Bugs</h2>
+      {% include blocks/itembox.html %}
+    </div>
+  </div>
+  <!-- /.tab-content -->
 </div>
