--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -33,8 +33,12 @@
 
   margin: 20px 0;
 
+  &--focus {
+    z-index: 100;
+  }
+
   &:focus-within {
-    z-index: 1;
+    z-index: 100;
   }
 
   &__action {
@@ -51,8 +55,7 @@
   &__input {
     position: relative;
     flex: auto;
-    background-color: #FFF;
-    box-shadow: 0 0 50px 0 rgba(0,0,0,.35);
+    background-color: #F8F8F8;
     transition: all .5s ease;
 
     input,
@@ -91,10 +94,6 @@
       input,
       textarea {
         opacity: 1;
-      }
-
-      &:focus-within {
-        box-shadow: 0 0 50px 0 rgba(0,0,0,.35);
       }
     }
   }
