Removed action row for header

--- a/_includes/blocks/old-pmx-item-detail-panel.html
+++ b/_includes/blocks/old-pmx-item-detail-panel.html
@@ -1,5 +1,5 @@
 <div class="tid-content-wrapper JS-old-panel" panel-name="overview">
-  <h2 class="pagetitle" style="padding: 0 15px;">Content</h2>
+  <h2 class="pagetitle" style="padding: 15px 15px 0; margin-top: 0;">Content</h2>
   <div id="tabs" class="tid-sidebar">
     <div class="scroller scroller-right">
       <div class="go-right invisible" style="display: none;"></div>
