Breadcrumb: added html tooltip

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <a class="breadcrumbs__link" href="#">{{item.name}}</a>
+      <a class="breadcrumbs__link" href="#" title="{{item.name}}">{{item.name}}</a>
 
       <div class="breadcrumbs__seperator">/</div>
     </div>
