Share: added copy to clipboard functionality too

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -16,6 +16,7 @@
     <h2 class="truncate">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
   </div>
   <div class="header__actions">
+    <div class="block-action JS_share" data-clipboard-text="ID: 391441, Title:  PMX - Fix horizontal scroll alterneting in FireFox , link: https://tenforce.github.io/tracker-mockup/present"></div>
     <div class="block-action disabled"></div>
     <div class="block-action"><sup></sup></div>
     <div class="block-action readonly">
