--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -11,6 +11,8 @@
 <!-- Plugins -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/clipboard.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/copy-clipboard.js"></script>
 
 <!-- Components -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
