--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -11,6 +11,7 @@
 
     <!-- POPUPS -->
     {% include popups/multiSelector-columnpicker.html %}
+    {% include popups/popup-copy-clipboard.html %}
 
     {% include foot.html %}
 
