--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -4,6 +4,7 @@
 .breadcrumbs {
   position: relative;
   display: flex;
+  justify-content: flex-start;
   align-items: center;
   padding: 5px 10px;
   background-color: var(--color-grey);
@@ -11,8 +12,7 @@
   overflow: hidden;
 
   &--overflow {
-    direction: rtl;
-    text-align: right;
+    justify-content: flex-end;
 
     &::after {
       content: '';
@@ -27,13 +27,11 @@
     }
 
     .breadcrumbs__item {
-      direction: ltr;
-
-      &:last-child {
+      &:first-child {
         position: absolute;
         top: 0;
         left: -1px;
-        z-index: 1;
+        z-index: 2;
         opacity: 1;
         padding: 5px 10px;
         background-color: var(--color-grey);
@@ -95,7 +93,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    padding: 0 3px;
+    padding: 0 0 0 3px;
   }
 
   &__seperator {
