--- a/sass/components/headers.scss
+++ b/sass/components/headers.scss
@@ -51,7 +51,7 @@
 
     &:focus {
       margin: 0;
-      padding: 15px 15px 15px;
+      padding: 15px;
       opacity: 1;
       box-shadow: 0 0 100px rgba(0, 0, 0, 0.2);
       cursor: text;
@@ -65,8 +65,6 @@
     &--focused {
       z-index: 50;
     }
-
-
   }
 
   &__type {
@@ -84,6 +82,8 @@
   }
 
   &__actions {
+    display: flex;
+    align-items: center;
     position: absolute;
     top: 0;
     right: 0;
@@ -92,8 +92,6 @@
     padding: 0 10px 0 0;
     background-color: #FFF;
     z-index: 2;
-    display: flex;
-    align-items: center;
     opacity: 1;
     transition: opacity .15s ease-in-out;
 
