--- a/sass/tailwind-extend.scss
+++ b/sass/tailwind-extend.scss
@@ -136,6 +136,26 @@ html {
   z-index: -1;
 }
 
+.z-lowest {
+  z-index: -1000;
+}
+.z-lower {
+  z-index: -900;
+}
+.z-low {
+  z-index: -800;
+}
+.z-high {
+  z-index: 800;
+}
+.z-higher {
+  z-index: 900;
+}
+.z-highest {
+  z-index: 1000;
+}
+
+
 /* Width / Height */
 
 .max-w-xxs {
