--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -103,10 +103,8 @@
     position: relative;
     display: block;
     height: 160px;
+    overflow: hidden;
     background-color: #CCC;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
 
     &-label {
       position: absolute;
@@ -117,6 +115,79 @@
       font-weight: 700;
       color: white;
       text-transform: uppercase;
+    }
+
+    &:hover {
+      .comment-field__attachment-thumbnail {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  &__attachment-thumbnail {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: all 10s ease;
+    transform: scale(1);
+    backface-visibility: hidden;
+  }
+}
+
+
+
+
+
+
+
+
+
+.comment-post {
+  margin: 15px 0;
+
+  &__label {
+    padding: 2px 10px;
+  }
+
+  &__bubble {
+    display: inline-block;
+    background-color: #F8F8F8;
+    border-radius: 5px;
+
+    &-attachment {
+      position: relative;
+      display: block;
+      height: 160px;
+      overflow: hidden;
+      background-color: #CCC;
+      border-radius: 5px 5px 0 0;
+    }
+
+    &-attachment-thumbnail {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      transition: all 10s ease;
+      transform: scale(1);
+      backface-visibility: hidden;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
+    &-message {
+      padding: 10px;
     }
   }
 }
