--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -151,6 +151,14 @@
 .comment-post {
   margin: 15px 0;
 
+  &--self {
+    text-align: right;
+
+    .comment-post__bubble {
+      background-color: #dbdbdb;
+    }
+  }
+
   &__label {
     padding: 2px 10px;
   }
