--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -2,7 +2,7 @@
   <input type="text" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END" class="header__inputTitle h2">
   <div class="header__title">
     <div class="header__type header__type--bug">
-      <div class="header__label">
+      <div class="header__label header__label--bug">
         <div class="selector selector--expanded ">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
             <div class="selector__block">
