Added autogrow JS

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/clipboard.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/copy-clipboard.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/autogrow.min.js"></script>
 
 <!-- Components -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
