devide tailwind extend in multiple files

--- a/sass/tailwind-extend.scss
+++ b/sass/tailwind-extend.scss
@@ -33,167 +33,19 @@ html {
   line-height: normal;
 }
 
+@import "tailwind/layout.css";
+@import "tailwind/typography.css";
+@import "tailwind/backgrounds.css";
+@import "tailwind/flexbox.css";
+@import "tailwind/spacing.css";
+@import "tailwind/sizing.css";
+@import "tailwind/animations.css";
+@import "tailwind/transitions.css";
+@import "tailwind/transforms.css";
+@import "tailwind/filters.css";
+
 .scrollbar-none::-webkit-scrollbar {
   display: none;
-}
-
-/* Margin & Padding */
-
-.p-10 {
-  padding: 2.5rem;
-}
-.pt-10, .py-10 {
-  padding-top: 2.5rem;
-}
-.pr-10, .px-10 {
-  padding-right: 2.5rem;
-}
-.pb-10, .py-10 {
-  padding-bottom: 2.5rem;
-}
-.pl-10, .px-10 {
-  padding-left: 2.5rem;
-}
-
-.p-12 {
-  padding: 3rem;
-}
-.pt-12, .py-12 {
-  padding-top: 3rem;
-}
-.pr-12, .px-12 {
-  padding-right: 3rem;
-}
-.pb-12, .py-12 {
-  padding-bottom: 3rem;
-}
-.pl-12, .px-12 {
-  padding-left: 3rem;
-}
-
-.p-20 {
-  padding: 5rem;
-}
-.pt-20, .py-20 {
-  padding-top: 5rem;
-}
-.pr-20, .px-20 {
-  padding-right: 5rem;
-}
-.pb-20, .py-20 {
-  padding-bottom: 5rem;
-}
-.pl-20, .px-20 {
-  padding-left: 5rem;
-}
-
-.px-1\/5 {
-  padding-left: 20%;
-  padding-right: 20%;
-}
-.pl-1\/5 {
-  padding-left: 20%;
-}
-.pr-1\/5 {
-  padding-right: 20%;
-}
-
-@media (min-width: 576px) {
-  .sm\:p-20 {
-    padding: 5rem;
-  }
-  .sm\:pt-20, .sm\:py-20 {
-    padding-top: 5rem;
-  }
-  .sm\:pr-20, .sm\:px-20 {
-    padding-right: 5rem;
-  }
-  .sm\:pb-20, .sm\:py-20 {
-    padding-bottom: 5rem;
-  }
-  .sm\:pl-20, .sm\:px-20 {
-    padding-left: 5rem;
-  }
-}
-
-/* Flex */
-
-.flex {
-  &-grow {
-    &-0 {
-      flex-grow: 0;
-    }
-    &-1 {
-      flex-grow: 1;
-    }
-    &-2 {
-      flex-grow: 2;
-    }
-    &-3 {
-      flex-grow: 3;
-    }
-    &-4 {
-      flex-grow: 4;
-    }
-    &-5 {
-      flex-grow: 5;
-    }
-    &-6 {
-      flex-grow: 6;
-    }
-  }
-}
-
-/* Position */
-
-.z-1- {
-  z-index: -1;
-}
-
-.z-lowest {
-  z-index: -1000;
-}
-.z-lower {
-  z-index: -900;
-}
-.z-low {
-  z-index: -800;
-}
-.z-high {
-  z-index: 800;
-}
-.z-higher {
-  z-index: 900;
-}
-.z-highest {
-  z-index: 1000;
-}
-
-
-/* Width / Height */
-
-.max-w-xxs {
-  max-width: 5rem;
-}
-
-.w-half-screen {
-  width: 50vw;
-}
-
-.min-h-1\/2-screen {
-  min-height: 50vh;
-}
-.min-h-2\/3-screen {
-  min-height: 75vh;
-}
-
-@media (min-width: 576px) {
-  .sm\:min-h-1\/2-screen {
-    min-height: 50vh;
-  }
-  .sm\:min-h-2\/3-screen {
-    min-height: 75vh;
-  }
 }
 
 /* Lists */
@@ -204,242 +56,4 @@ html {
 
 .list-blue li a {
   color: #01ADFF;
-}
-
-/* Backgrounds */
-
-.bg-cover-wide {
-  position: absolute;
-  top: -5%;
-  right: 0;
-  bottom: 0;
-  left: -5%;
-  width: 110%;
-  height: 110%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-/* Animations */
-
-@-webkit-keyframes bg-gradient {
-  0% {background-position: 0% 0%;}
-  50% {background-position: 100% 100%;}
-  100% {background-position: 0% 0%;}
-}
-@keyframes bg-gradient {
-  0% {background-position: 0% 0%;}
-  50% {background-position: 100% 100%;}
-  100% {background-position: 0% 0%;}
-}
-.animate-bg-gradient {
-  overflow: hidden;
-  color: #FFF;
-}
-.animate-bg-gradient-container {
-  background-size: 200%;
-  background-position: 0 0;
-  -webkit-animation: bg-gradient 70s ease infinite;
-  animation: bg-gradient 70s ease infinite;
-}
-
-@-webkit-keyframes multi-color {
-  0%   {  color: #000;    }
-  20%  {  color: #c90000; }
-  40%  {  color: #c39132; }
-  60%  {  color: #0ad1e9; }
-  80%  {  color: #180c49; }
-  100% {  color: #000;    }
-}
-@keyframes multi-color {
-  0%   {  color: #000;    }
-  20%  {  color: #c90000; }
-  40%  {  color: #c39132; }
-  60%  {  color: #0ad1e9; }
-  80%  {  color: #180c49; }
-  100% {  color: #000;    }
-}
-.animate-multi-color {
-  -webkit-animation: multi-color 20s linear infinite;
-  animation: multi-color 20s linear infinite;
-}
-
-@keyframes loading {
-  0% { background-position: 0 0; }
-  100% { background-position: 80px 0; }
-}
-.animate-loading::before {
-  content: '';
-  position: absolute;
-  z-index: 10;
-  top: 0; right: 0; bottom: 0; left: 0;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  background-size: 80px 80px;
-  background-image: linear-gradient(
-    135deg,
-    rgba(0,0,0,.1) 0%,
-    rgba(0,0,0,.1) 20%,
-    transparent 40%,
-    rgba(0,0,0,.1) 50%,
-    rgba(0,0,0,.1) 70%,
-    transparent 90%,
-    rgba(0,0,0,.1) 100%
-  );
-  animation: loading 3s linear infinite;
-}
-
-@keyframes pop {
-  25% { transform: scale(1.1); }
-  50% { transform: scale(1); }
-  75% { transform: scale(1.1); }
-  100% { transform: scale(1); }
-}
-.animate-popup {
-  animation: pop .5s ease forwards;
-}
-
-@keyframes fadein {
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-.animate-fadein {
-  opacity: 0;
-  transform: translateY(-20px);
-  animation: fadein .3s ease forwards;
-}
-
-@keyframes fadeout {
-  100% {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-}
-.animate-fadeout {
-  opacity: 1;
-  transform: translateY(0);
-  animation: fadeout .3s ease forwards;
-}
-
-@keyframes width-to-full {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 100%;
-  }
-}
-@keyframes opacity-to-0 {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.animate-fadein-and-dissapear {
-  opacity: 0;
-  transform: translateY(-20px);
-  animation: fadein .3s ease forwards, opacity-to-0 .3s linear 2s forwards;
-}
-.animate-fadein-and-dissapear::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  background-color: rgba(0,0,0,.02);
-  z-index: 1;
-  animation: width-to-full 2s linear forwards;
-}
-
-/* Transitions */
-
-.transition {
-  transition-property: all;
-  transition-duration: .3s;
-  transition-timing-function: ease-in-out;
-}
-.transition-fastest {
-  transition-duration: .15s;
-}
-.transition-faster {
-  transition-duration: .3s;
-}
-.transition-fast {
-  transition-duration: .5s;
-}
-.transition-slowest {
-  transition-duration: 30s;
-}
-.transition-linear {
-  transition-timing-function: linear;
-}
-.transition-ease {
-  transition-timing-function: ease;
-}
-
-/* Transforms */
-
-.transform-scale-base {
-  transform: scale(1);
-}
-.transform-scale-md {
-  transform: scale(1.5);
-}
-
-.hover\:transform-scale-base:hover {
-  transform: scale(1);
-}
-.hover\:transform-scale-md:hover {
-  transform: scale(1.2);
-}
-
-@media (min-width: 576px) {
-  .sm\:transform-scale-base {
-    transform: scale(0);
-  }
-  .sm\:transform-scale-md {
-    transform: scale(1.5);
-  }
-}
-
-/* Filters */
-
-.filter-blur-0 {
-  filter: blur(0);
-}
-.filter-blur-15 {
-  filter: blur(15px);
-}
-.filter-blur-20 {
-  filter: blur(20px);
-}
-
-.filter-grayscale-100 {
-  filter: grayscale(1);
-}
-
-@media (min-width: 576px) {
-  .sm\:filter-blur-0 {
-    filter: blur(0);
-  }
-  .sm\:filter-blur-15 {
-    filter: blur(15px);
-  }
-  .sm\:filter-blur-20 {
-    filter: blur(20px);
-  }
-}
-
-/* Text */
-
-.text-huge {
-  font-size: 94px;
 }
