--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,10 @@
 <meta name="theme-color" content="#ffffff">
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i&amp;subset=latin-ext" rel="stylesheet">
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/shared.css">
+
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/app.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/plugins.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/components.css">
 
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
