--- a/sass/app.scss
+++ b/sass/app.scss
@@ -75,3 +75,75 @@ body {
     }
   }
 }
+
+
+
+/* Applicable sliders */
+
+.appl-sliders {
+  position: relative;
+}
+.appl-slider {
+  position: relative;
+  margin: 15px 20px;
+
+  &__header {
+    position: relative;
+    overflow: hidden;
+
+    &Line {
+      position: absolute;
+      white-space: nowrap;
+      letter-spacing: 6px;
+      font-size: 16px;
+      line-height: 12px;
+      color: #6e6e6e;
+      top: 0;
+    }
+
+    &Label {
+      position: relative;
+      text-transform: uppercase;
+      font-size: 16px;
+      font-weight: 400;
+      padding: 0 10px 0 0;
+      background-color: #FFF;
+    }
+
+    &Toggle {
+      position: absolute;
+      top: 4px;
+      right: 0;
+      font-size: 10px;
+      text-transform: uppercase;
+      font-weight: 700;
+      background-color: #FFF;
+      letter-spacing: .5px;
+      padding: 0 0 0 10px;
+      text-decoration: none;
+      color: #000;
+
+
+      &::after {
+        content: '܊';
+        padding: 0 0 0 5px;
+      }
+
+      &--active::after {
+        content: '܋';
+      }
+
+      &--addNew::after {
+        content: '\e114';
+      }
+
+      &--link::after {
+        content: '\e005';
+      }
+    }
+  }
+  &__body {
+    overflow: hidden;
+    display: none;
+  }
+}
