--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -56,7 +56,7 @@
 
 	&:hover {
     .breadcrumbs__item {
-      * {
+      > * {
 	      opacity: 1;
       }
     }
@@ -66,7 +66,7 @@
     display: flex;
     align-items: center;
 
-    * {
+    > * {
       transition: all .3s ease-in-out;
       opacity: .8;
     }
