--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -1,18 +1,6 @@
 ---
 ---
 
-@keyframes shadow-low-high {
-  0% {
-    box-shadow: 0 -2px 20px rgba(0,0,0,.07), 0 1px 0px rgba(0,0,0,.03);
-  }
-  50% {
-    box-shadow: 0 -2px 20px rgba(0,0,0,.13), 0 1px 0px rgba(0,0,0,.09);
-  }
-  100% {
-    box-shadow: 0 -2px 20px rgba(0,0,0,.07), 0 1px 0px rgba(0,0,0,.03);
-  }
-}
-
 @keyframes shake-it {
   0% {
     transform: translate(0,0);
@@ -98,19 +86,13 @@
     flex: auto;
     min-height: 40px;
     background-color: #FFF;
-    box-shadow: 0 -2px 20px rgba(0,0,0,.07), 0 1px 0px rgba(0,0,0,.03);
     transition: all .5s ease;
 
-    animation:
-      shadow-low-high 3s ease-in-out infinite,
-      shake-it 20s linear 20s infinite;
-
-    &:not(.comment-field__input--empty):hover {
-      box-shadow: 0 -2px 20px rgba(0,0,0,.13), 0 1px 0px rgba(0,0,0,.09);
-    }
+    animation: shake-it 30s linear 20s infinite;
 
     input,
-    textarea {
+    textarea,
+    .textarea {
       outline: 0;
       padding: 10px;
       border-radius: 1px;
@@ -139,7 +121,8 @@
       animation: none;
 
       input,
-      textarea {
+      textarea,
+      .textarea {
         opacity: 1;
         box-sizing: border-box;
       }
@@ -167,7 +150,7 @@
 
     &:hover {
       .comment-field__attachment-thumbnail {
-        transform: scale(1.1);
+        /*transform: scale(1.1);*/
       }
     }
   }
@@ -199,7 +182,30 @@
 
 
 
+.comments-seperator {
+  position: relative;
+  text-align: center;
+  margin: 15px 0;
 
+  &::before {
+    content: '';
+    position: absolute;
+    top: 11px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(184, 194, 204, .35);
+    z-index: 0;
+  }
+
+  span {
+    position: relative;
+    background-color: #FFF;
+    padding: 0 10px;
+    font-weight: 400;
+    color: rgba(184, 194, 204, 1);
+  }
+}
 
 
 
@@ -207,11 +213,23 @@
 .comment-post {
   margin: 15px 0;
 
-  &--self {
+  &--history {
     text-align: right;
+    opacity: .65;
+    font-size: 14px;
+
+    .comment-post__value {
+      flex-direction: row-reverse;
+    }
 
     .comment-post__bubble {
-      background-color: #dbdbdb;
+      background-color: #F8F8F8;
+    }
+  }
+
+  &--self {
+    .comment-post__bubble {
+      background-color: #DFDFDF;
     }
   }
 
@@ -219,10 +237,36 @@
     padding: 2px 10px;
   }
 
+  &__value {
+    display: flex;
+    align-items: center;
+  }
+
   &__bubble {
+    position: relative;
     display: inline-block;
-    background-color: #F8F8F8;
-    border-radius: 5px;
+    background-color: #F4F4F4;
+    border-radius: 0 10px 10px 10px;
+
+    &--overflow {
+      max-height: 200px;
+      overflow: hidden;
+
+      .readmore {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 30px;
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(244,244,244,1) 90%,rgba(255, 255, 255, 1) 100%);
+        cursor: pointer;
+        transition: all .3s ease-in-out;
+
+        &:hover {
+          opacity: .75;
+        }
+      }
+    }
 
     &-attachment {
       position: relative;
@@ -255,5 +299,10 @@
     &-message {
       padding: 10px;
     }
+  }
+
+  &__action {
+    min-width: 40px;
+    text-align: center;
   }
 }
