--- a/sass/tailwind/animations.scss
+++ b/sass/tailwind/animations.scss
@@ -83,10 +83,12 @@
 @keyframes fadein {
   0% {
     opacity: 0;
+    z-index: -1;
     transform: translateY(-20px);
   }
   100% {
     opacity: 1;
+    z-index: 999;
     transform: translateY(0px);
   }
 }
@@ -99,9 +101,11 @@
 @keyframes fadeout {
   0% {
     opacity: 1;
+    z-index: 999;
   }
   100% {
     opacity: 0;
+    z-index: -1;
     transform: translateY(-20px);
   }
 }
