improve buttons component

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -42,7 +42,8 @@ body {
     background-color: #FFF;
     margin: 50px 5%;
   }
-  &.page-Selectors {
+  &.page-Selectors,
+  &.page-Comments {
     background-color: #FFF;
   }
   &.page-Itembox {
