--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,15 +27,19 @@
 <body style="background-color: #FFF;">
 
   <section class="my-8 px-1/5 text-center">
-    <a href="present" target="_blank" class="push push--go">Current</a>
-    <a href="future" target="_blank" class="push push--go">Future</a>
+    <a href="present" target="_blank" class="push push--go mx-1">Current</a>
+    <a href="future" target="_blank" class="push push--go mx-1">Future</a>
   </section>
 
   <section class="my-8 px-1/5 text-center">
-    <a href="selectors" target="_blank" class="push push--go">Selectors</a>
-    <a href="itembox" target="_blank" class="push push--go">Table</a>
-    <a href="font" target="_blank" class="push">Font config</a>
-    <a href="tutorial" target="_blank" class="push">Tutorial</a>
+    <a href="selectors" target="_blank" class="push push--go mx-1">Selectors</a>
+    <a href="comments" target="_blank" class="push push--drop push--small-caps mx-1"><span class="font-normal"></span> Comments</a>
+    <a href="itembox" target="_blank" class="push push--go mx-1">Table</a>
+  </section>
+
+  <section class="my-8 px-1/5 text-center">
+    <a href="font" target="_blank" class="push mx-1">Font config</a>
+    <a href="tutorial" target="_blank" class="push mx-1">Tutorial</a>
   </section>
 
 </body>
