--- a/sass/components/comment-field.scss
+++ b/sass/components/comment-field.scss
@@ -276,7 +276,7 @@
       height: 160px;
       overflow: hidden;
       background-color: #CCC;
-      border-radius: 5px 5px 0 0;
+      border-radius: 0 10px 0 0;
     }
 
     &-attachment-thumbnail {
