--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -80,6 +80,7 @@
       display: inline-block;
       padding: 15px 0;
       color: var(--color-gold);
+      cursor: pointer;
       text-decoration: none;
       text-transform: uppercase;
       font-size: 14px;
