Fixed expand/collapse in itembox. Foot should not be there, makes no sense

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -11,7 +11,7 @@
 
 <div class="itemBox">
   <ul class="itemBox__row itemBox__row--thead">
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
+    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand_header">
       <div class="itemBox__cellInner">
         <div class="itemBox__action"></div>
       </div>
@@ -170,11 +170,6 @@
     </li>
   </ul>
 
-  <ul class="itemBox__row itemBox__row--tfoot">
-    <li class="itemBox__cell">
-    </li>
-  </ul>
-
   <div class="itemBox animate-fadein JS_itemBox--children">
     <header class="header header--table">
       <div class="header__title">
@@ -189,9 +184,9 @@
     </header>
 
     <ul class="itemBox__row itemBox__row--thead">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
+          <div class="itemBox__action"></div>
         </div>
       </li>
       <li class="itemBox__cell">
