--- a/_includes/components/selector.html
+++ b/_includes/components/selector.html
@@ -1,7 +1,7 @@
 <!-- splitting up the data into multiple items. separator ; -->
 {% assign data = include.selectorData | split: ";" %}
 
-<div class="selector selector--expanded">
+<div class="selector JS_selector {% if include.expanded %} selector--expanded {% endif %} {% if include.singleselect %} selector--singleselect {% endif %}">
 <!-- for loop through items -->
 {% for item in data %}
   <!-- getting the variables from the items. separator , -->
@@ -9,21 +9,28 @@
   <!-- assign color variable if there is a color -->
   {% if itemData[0] != "" %}
     {% assign color = "style='background-color: "| append: {{itemData[0]}} | append: ";'" %}
+  {% else %}
+    {% assign color = "" %}
   {% endif %}
-  {% assign icon = itemData[1] %}
+
+  {% assign prefix = itemData[1] %}
   {% assign label = itemData[2] %}
   {% assign field = itemData[3] %}
 
   {% assign colorSize = color | size %}
-  {% assign iconSize = icon | size %}
+  {% assign prefixSize = prefix | size %}
   {% assign labelSize = label | size %}
   {% assign fieldSize = field | size %}
 
-  <div class="selector__item JS_selectorItem--active selector__item--selected">
+  <!-- add itemSeparator if it's multiple items -->
+  {% if forloop.index > 1 %}
+    <div class="selector__itemSeperator"></div>
+  {% endif %}
+  <div class="selector__item JS_selectorItem {% if include.selectedIndex == forloop.index %} selector__item--selected JS_selectorItem--active {% endif %}">
     <div class="selector__block">
       <!-- only show item parts if they are at least 1 character long -->
-      {% if iconSize > 0 %}
-        <div class="selector__blockPart selector__blockPart--prefix" {{color}} >{{icon}}</div>
+      {% if prefixSize > 0 %}
+        <div class="selector__blockPart selector__blockPart--prefix" {{color}} >{{prefix}}</div>
       {% endif %}
       {% if labelSize > 0  %}
         <div class="selector__blockPart selector__blockPart--label">{{label}}</div>
