--- a/_includes/components/selector.html
+++ b/_includes/components/selector.html
@@ -65,18 +65,21 @@
   <div class="selector__item JS_selectorItem {{selected}}">
     <div class="selector__block">
       <!-- only show item parts if they are at least 1 character long -->
+      <!-- if there is a prefix or color, show prefix -->
       {% if prefixSize > 0 or colorSize > 0 %}
         <div class="selector__blockPart selector__blockPart--prefix" {{color}} >{{prefix}}</div>
       {% endif %}
-      {% if labelSize > 0  %}
+      <!-- if there is a label, show label -->
+      {% if labelSize > 0 %}
         <div class="selector__blockPart selector__blockPart--label">{{label}}</div>
       {% endif %}
-      {% if fieldSize > 0   %}
-        {% if labelSize > 0   %}
+      <!-- if there is a field, show field -->
+      {% if fieldSize > 0 %}
+        <!-- if there is a field AND a label, show blockSeparator -->
+        {% if labelSize > 0 %}
           <div class="selector__blockSeperator"></div>
         {% endif %}
         <div class="selector__blockPart selector__blockPart--field">{{field}}</div>
-
       {% endif %}
     </div>
   </div>
